--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-sliding-pane": "^7.3.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
